--- a/app/src/main/res/layout/activity_adicionar_editar_cimento.xml
+++ b/app/src/main/res/layout/activity_adicionar_editar_cimento.xml
@@ -21,7 +21,7 @@
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView30">
+            app:layout_constraintTop_toBottomOf="@+id/textViewTituloAdicionarEditarCimento">
 
             <Button
                 android:id="@+id/button"
@@ -39,7 +39,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/textView30"
+            android:id="@+id/textViewTituloAdicionarEditarCimento"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
