Inicio da configuração do RecyclerView na em AdicionarEditarCimentosActivity.

--- a/app/src/main/res/layout/activity_adicionar_editar_cimento.xml
+++ b/app/src/main/res/layout/activity_adicionar_editar_cimento.xml
@@ -155,6 +155,7 @@
             app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/RecyclerViewAdicionarEditarCimentos"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
