simplicação do código em AdiconarEditarCimentosActivity e modificação da aparencias da lista dos pontos do cimento.

--- a/app/src/main/res/layout/lista_pontos_cimento_adapter.xml
+++ b/app/src/main/res/layout/lista_pontos_cimento_adapter.xml
@@ -9,6 +9,10 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="2dp"
+        android:background="#303030"
         android:paddingTop="8dp"
         android:paddingBottom="8dp">
 
@@ -16,10 +20,10 @@
             android:id="@+id/textViewItemPontoCimento"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
             android:text="a/c = 0.00  -->  Fck = 0.00"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
