configuração do botão confirmar na tela AdicionarEditarCimentoActivity e inicio da configuração do RecyclerView na tela DadosCimentoActivity.

--- a/app/src/main/res/layout/activity_adicionar_editar_cimento.xml
+++ b/app/src/main/res/layout/activity_adicionar_editar_cimento.xml
@@ -24,14 +24,14 @@
             app:layout_constraintTop_toBottomOf="@+id/textViewTituloAdicionarEditarCimento">
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/buttonCancelar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Cancelar" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/buttonConfirmar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
