--- a/app/src/main/res/layout/activity_dados_cimento.xml
+++ b/app/src/main/res/layout/activity_dados_cimento.xml
@@ -7,7 +7,7 @@
     tools:context=".activities.DadosCimentoActivity">
 
     <TextView
-        android:id="@+id/textView17"
+        android:id="@+id/textViewRotuloDoCimento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -30,7 +30,7 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView17">
+        app:layout_constraintTop_toBottomOf="@+id/textViewRotuloDoCimento">
 
         <Button
             android:id="@+id/buttonDescartar"
@@ -54,4 +54,17 @@
             android:text="Salvar" />
 
     </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewDadosCimento"
+        android:layout_width="0dp"
+        android:layout_height="489dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
