--- a/app/src/main/res/layout/activity_adicionar_editar_cimento.xml
+++ b/app/src/main/res/layout/activity_adicionar_editar_cimento.xml
@@ -86,7 +86,8 @@
                 android:id="@+id/textInputTempoDeCura"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Tempo de cura (dias)" />
+                android:hint="Tempo de cura (dias)"
+                android:inputType="number" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
