--- a/app/src/main/res/layout/lista_pontos_cimento_adapter.xml
+++ b/app/src/main/res/layout/lista_pontos_cimento_adapter.xml
@@ -21,8 +21,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
-            android:text="a/c = 0.00  -->  Fck = 0.00"
-            android:textSize="24sp"
+            android:text="a/c = 0.00  ➔  Fck = 0.00"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
