--- a/app/src/main/res/layout/activity_dados_cimento.xml
+++ b/app/src/main/res/layout/activity_dados_cimento.xml
@@ -33,21 +33,21 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewRotuloDoCimento">
 
         <Button
-            android:id="@+id/buttonDescartar"
+            android:id="@+id/buttonDescartarCimento"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Descartar" />
 
         <Button
-            android:id="@+id/buttonEditar"
+            android:id="@+id/buttonEditarCimento"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="editar" />
 
         <Button
-            android:id="@+id/buttonSalvar"
+            android:id="@+id/buttonSalvarCimento"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -122,6 +122,16 @@
             android:layout_marginLeft="16dp"
             android:text="Fórmula de Abrams:"
             android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/textViewObservacoes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
+            android:text="Observações:"
+            android:textSize="18sp" />
+
     </LinearLayout>
 
     <Button
