--- a/app/src/main/res/layout/activity_adicionar_editar_cimento.xml
+++ b/app/src/main/res/layout/activity_adicionar_editar_cimento.xml
@@ -135,7 +135,7 @@
                 android:layout_weight="1">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/textInputValorDeFck"
+                    android:id="@+id/textInputValorDeFcj"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Valor de Fck"
