--- a/app/src/main/res/layout/activity_cimentos_salvos.xml
+++ b/app/src/main/res/layout/activity_cimentos_salvos.xml
@@ -36,6 +36,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewCimentosSalvos"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
