--- a/app/src/main/res/layout/lista_cimentos_salvos_adapter.xml
+++ b/app/src/main/res/layout/lista_cimentos_salvos_adapter.xml
@@ -9,8 +9,12 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
-        android:background="#303030"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="3dp"
+        android:background="@drawable/rounded_corner"
+        android:elevation="3dp"
         android:paddingBottom="16dp">
 
         <TextView
