--- a/app/src/main/res/layout/lista_traco_adapter.xml
+++ b/app/src/main/res/layout/lista_traco_adapter.xml
@@ -7,10 +7,15 @@
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        style="@android:style/ButtonBar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="4dp"
-        android:background="#303030"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="3dp"
+        android:background="@drawable/rounded_corner"
+        android:elevation="3dp"
         android:hapticFeedbackEnabled="true"
         android:paddingBottom="8dp">
 
