--- a/app/src/main/res/drawable/rounded_corner.xml
+++ b/app/src/main/res/drawable/rounded_corner.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android" android:color="#bbb">
 
-    <solid android:color="#efefef"/>
-    <corners android:radius="5dp"/>
-
-</shape>
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="#efefef"/>
+            <corners android:radius="5dp"/>
+        </shape>
+    </item>
+</ripple>
