--- a/app/src/main/res/layout/lista_pontos_cimento_adapter.xml
+++ b/app/src/main/res/layout/lista_pontos_cimento_adapter.xml
@@ -11,8 +11,9 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
-        android:layout_marginBottom="2dp"
-        android:background="#303030"
+        android:layout_marginTop="1px"
+        android:layout_marginBottom="1dp"
+        android:background="@drawable/rounded_corner"
         android:paddingTop="8dp"
         android:paddingBottom="8dp">
 
