--- a/app/src/main/res/layout/lista_traco_adapter.xml
+++ b/app/src/main/res/layout/lista_traco_adapter.xml
@@ -7,31 +7,32 @@
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        style="@android:style/ButtonBar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="3dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="4dp"
         android:background="@drawable/rounded_corner"
         android:elevation="3dp"
         android:hapticFeedbackEnabled="true"
-        android:paddingBottom="8dp">
+        android:paddingBottom="8dp"
+        >
 
         <TextView
             android:id="@+id/textTraco"
-            android:layout_width="0dp"
+            android:layout_width="220dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginStart="12dp"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit="marquee_forever"
             android:padding="8dp"
+            android:scrollHorizontally="true"
+            android:singleLine="true"
             android:text="Titulo do traço"
+
             android:textColor="@color/colorAccent"
             android:textSize="20sp"
-            app:layout_constraintEnd_toStartOf="@+id/textViewDataDoTraco"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -81,6 +82,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewTipoDeTraco" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
